fixes broken style for order page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,7 @@
  *= require_self
  *= require_tree .
  */
+
+ .inline-block {
+   display: inline-block;
+ }
